--- a/.gitignore
+++ b/.gitignore
@@ -154,3 +154,31 @@ $RECYCLE.BIN/
 
 # Mac desktop service store files
 .DS_Store
+/packages
+/packages/NUnit.3.5.0
+/packages/NUnit.3.5.0/lib
+/packages/NUnit.3.5.0/lib/dotnet
+/packages/NUnit.3.5.0/lib/dotnet/nunit.framework.dll
+/packages/NUnit.3.5.0/lib/dotnet/nunit.framework.xml
+/packages/NUnit.3.5.0/lib/net20
+/packages/NUnit.3.5.0/lib/net20/nunit.framework.dll
+/packages/NUnit.3.5.0/lib/net20/nunit.framework.xml
+/packages/NUnit.3.5.0/lib/net20/NUnit.System.Linq.dll
+/packages/NUnit.3.5.0/lib/net35
+/packages/NUnit.3.5.0/lib/net35/nunit.framework.dll
+/packages/NUnit.3.5.0/lib/net35/nunit.framework.xml
+/packages/NUnit.3.5.0/lib/net40
+/packages/NUnit.3.5.0/lib/net40/nunit.framework.dll
+/packages/NUnit.3.5.0/lib/net40/nunit.framework.xml
+/packages/NUnit.3.5.0/lib/net45
+/packages/NUnit.3.5.0/lib/net45/nunit.framework.dll
+/packages/NUnit.3.5.0/lib/net45/nunit.framework.xml
+/packages/NUnit.3.5.0/lib/portable-net45+win8+wp8+wpa81+Xamarin.Mac+MonoAndroid10+MonoTouch10+Xamarin.iOS10
+/packages/NUnit.3.5.0/lib/portable-net45+win8+wp8+wpa81+Xamarin.Mac+MonoAndroid10+MonoTouch10+Xamarin.iOS10/nunit.framework.dll
+/packages/NUnit.3.5.0/lib/portable-net45+win8+wp8+wpa81+Xamarin.Mac+MonoAndroid10+MonoTouch10+Xamarin.iOS10/nunit.framework.xml
+/packages/NUnit.3.5.0/CHANGES.txt
+/packages/NUnit.3.5.0/LICENSE.txt
+/packages/NUnit.3.5.0/NOTICES.txt
+/packages/NUnit.3.5.0/NUnit.3.5.0.nupkg
+/packages/NUnit.3.5.0/NUnit.3.5.0.nuspec
+/packages/repositories.config
