--- a/WPFExperimentUT/WPFExperimentUT.csproj
+++ b/WPFExperimentUT/WPFExperimentUT.csproj
@@ -53,8 +53,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="OM\ConfigurationTest.cs" />
-    <Compile Include="OM\ProfileTest.cs" />
+    <Compile Include="Model\ConfigurationTest.cs" />
+    <Compile Include="Model\ProfileTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -65,6 +65,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModel\" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
