--- a/WPFExperiment/WPFExperiment.csproj
+++ b/WPFExperiment/WPFExperiment.csproj
@@ -53,7 +53,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Page Include="View\Controls\EditorTabItem.xaml">
+    <Page Include="View\Controls\Editor.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -67,8 +67,11 @@
     </Compile>
     <Compile Include="ViewModel\Commands\ApplicationCommands.cs" />
     <Compile Include="ViewModel\Commands\EditorCommands.cs" />
-    <Compile Include="View\Controls\EditorTabItem.xaml.cs">
-      <DependentUpon>EditorTabItem.xaml</DependentUpon>
+    <Compile Include="ViewModel\EditorViewModel.cs" />
+    <Compile Include="ViewModel\ViewModelBase.cs" />
+    <Compile Include="ViewModel\WindowViewModel.cs" />
+    <Compile Include="View\Controls\Editor.xaml.cs">
+      <DependentUpon>Editor.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
