Adjusted ViewModel names for MainWindow

--- a/WPFExperiment/WPFExperiment.csproj
+++ b/WPFExperiment/WPFExperiment.csproj
@@ -69,7 +69,7 @@
     <Compile Include="ViewModel\Commands\EditorCommands.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
-    <Compile Include="ViewModel\WindowViewModel.cs" />
+    <Compile Include="ViewModel\MainWindowViewModel.cs" />
     <Compile Include="View\Controls\EditorView.xaml.cs">
       <DependentUpon>EditorView.xaml</DependentUpon>
     </Compile>
