--- a/WPFExperiment/WPFExperiment.csproj
+++ b/WPFExperiment/WPFExperiment.csproj
@@ -65,8 +65,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ViewModel\Commands\ApplicationCommands.cs" />
-    <Compile Include="ViewModel\Commands\EditorCommands.cs" />
+    <Compile Include="ViewModel\Commands\RelayCommand.cs" />
     <Compile Include="ViewModel\EditorViewModel.cs" />
     <Compile Include="ViewModel\ViewModelBase.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
